# CS267_HW2

./: CMakeLists.txt  Francois Performance.xlsx  GeoRegion.cpp  GeoRegion.h  Geohash.cpp  Heuristics Performance.xlsx  MPIComm.h  MPIVectframe.h  MPIframe.h  Makefile  Region.cpp  Region.h  auto-serial.204074_195.error  auto-serial.204074_195.stdout  auto-serial.204078_185.error  auto-serial.204078_185.stdout  auto-serial.204085_175.error  auto-serial.204085_175.stdout  auto-serial.204092_165.error  auto-serial.204092_165.stdout  auto-serial.204096_19.error  auto-serial.204096_19.stdout  auto-serial.204104_18.error  auto-serial.204104_18.stdout  auto-serial.204107_17.error  auto-serial.204107_17.stdout  auto-serial.204109_16.error  auto-serial.204109_16.stdout  auto-serial.204120_2.error  auto-serial.204120_2.stdout  autograder.cpp  common.cpp  common.h  frame.h  mpi.cpp  mpi_frame.h  openmp.cpp  serial.cpp  serial_175.txt  serial_185.txt  (+3 more)
i hate this class/CS267 for ubuntu/: CMakeLists.txt  GeoRegion.h  Geohash.cpp  Makefile  Region.cpp  common.cpp  common.h  particles_gpu.tgz  quadtree.cpp  quadtree.h  serial  serial_16.txt  serial_165.txt  serial_17.txt  serial_18.txt  serial_195.txt
particles_cpu/: CMakeLists.txt  common.cpp  mpi.cpp  openmp.cpp  serial.cpp
